home filter spacing issue

--- a/src/containers/PageBuilder/SectionBuilder/SectionColumns/SectionColumns.module.css
+++ b/src/containers/PageBuilder/SectionBuilder/SectionColumns/SectionColumns.module.css
@@ -357,6 +357,7 @@
           &:nth-child(4) {
             /* width: auto; */
             padding: 0;
+            width: 40% !important;
             /* background-color: pink; */
           }
 
